GNOME Bugzilla – Bug 683523
warning at startup
Last modified: 2013-11-13 16:05:01 UTC
Created attachment 223684 [details] bt I get the following warning when I start the shell. Window manager warning: Log level 8: g_variant_unref: assertion `value != NULL' failed
Do you also see a "Agent registration failed:" before that? It could explain the real cause of this. In any case, reassigning to gnome-bluetooth, and preparing a patch to fix the warning.
Yeah: Agent registration failed: GDBus.Error:org.bluez.Error.AlreadyExists: Already Exists
Created attachment 223691 [details] [review] BluetoothAgent: return early in case of errors Prevents a warning from unreffing a NULL variant.
Review of attachment 223691 [details] [review]: Indeed, thanks. The prefix for the commit subject is "lib:" though.
Comment on attachment 223691 [details] [review] BluetoothAgent: return early in case of errors Pushed, thank you for the review. Leaving the bug open to understand the real warning, the one about agent registration. I don't know bluez very well, so I'll leave it to Bastien.
I don't see the warnings any more, and we recently ported to BlueZ 5 with a lot of fixes. Let's file a new bug if that reappears.