lib: return early in BluetoothAgent in case of errors

Prevents a warning from unreffing a NULL variant.

https://bugzilla.gnome.org/show_bug.cgi?id=683523